# iotedge

./: CHANGELOG.md  Microsoft.Azure.Devices.Edge.sln  THIRDPARTYNOTICES  nuget.config  versionInfo.json
builds/checkin/: e2e-checkin.yaml
builds/e2e/: connectivity.yaml  e2e.yaml  isa-95-smoke-test.yaml  longhaul.yaml  nested-e2e.yaml  stresstest.yaml
builds/misc/: docker-creds.yaml
builds/release/: detect-image-updates.yaml  refresh-api-proxy-images.yaml
builds/service/: service-deployment.yaml
e2e_deployment_files/: connectivity_deployment.template.json
edge-modules/api-proxy-module/: CHANGELOG.md
edge-modules/metrics-collector/: CHANGELOG.md
edgelet/: Cargo.toml
edgelet/dps/: Cargo.toml
edgelet/edgelet-http/: Cargo.toml
edgelet/edgelet-http-workload/: Cargo.toml
edgelet/edgelet-iothub/: Cargo.toml
edgelet/hyper-named-pipe/: Cargo.toml
edgelet/hyper-proxy/: Cargo.toml
edgelet/hyperlocal-windows/: Cargo.toml
edgelet/iotedge/: Cargo.toml
edgelet/iothubservice/: Cargo.toml
edgelet/iothubservice/examples/: device.rs
edgelet/iothubservice/src/: device.rs  lib.rs
edgelet/provisioning/: Cargo.toml
edgelet/tokio-uds-windows/: Cargo.toml
mqtt/mqtt3/: Cargo.toml
scripts/linux/: buildBranch.sh  nested-edge-deploy-agent.sh  release-tools.sh  trcE2ETest.sh
smoke/: refactor-e2e.md
smoke/IotEdgeQuickstart/: Program.cs  Quickstart.cs  packages.lock.json
snap/: snapcraft.yaml
snap/hooks/: configure
test/Microsoft.Azure.Devices.Edge.Test.Common/: Context.cs  IotHub.cs  Microsoft.Azure.Devices.Edge.Test.Common.csproj  (+1 more)
(+142 files in other folders)
